@@ -1,3 +1,5 @@
+2011-04-13 CERDAN Yohann <cerdanyohann@yahoo.fr>
+    * In plugins and contents list, add the possibility to show hidden pages/contents
 2011-04-11 CERDAN Yohann <cerdanyohann@yahoo.fr>
     * Nice feature : in extension list mode you can view the modified files in linux like diff mode (local file/TER file)
 2011-03-31 CERDAN Yohann <cerdanyohann@yahoo.fr>
